Refactor all common compiler phases from runtime to driver.common and update usages
Several files have been moved across directories and package structures have been updated in order to improve code organization. Also, multiple import statements in various files have been updated to correspond with the new location of classes and interfaces. Adjustments are made to facilitate future code maintenance and extensibility.